src/scss/modules/calendar.scss
.event-calendar {
  background-color: $dark-gray;
  box-shadow: $top-shadow, $bottom-shadow;
  padding: $outter-mobile;
  &__title {
    color: $primary;
    font-family: $accent;
    font-size: 2.4rem;
    margin: 1rem 0;
    position: relative;
    text-align: center;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    text-transform: uppercase;
    z-index: 90;
  }
  &__flex-container {
    display: flex;
    justify-content: center;
  }
}

.calendar {
  font-size: 1.4rem;
  &__header {
    display: none;
  }
  &__event {
    background-color: $light-gray;
    display: block;
    margin-bottom: .2rem;
    padding: 0.5rem;
    &--current {
      background-color: $primary-lighter;
      //font-weight: 700;
    }
    &--past {
      background-color: $light-gray;
      color: $dark-gray;
    }
    &--canceled {
      text-decoration: line-through;
    }
  }
  &__data {
    display: block;
    left: 9rem;
    margin-bottom: 1rem;
    position: relative;
    text-align: left;
    width: calc(100% - 9rem);
    &::before {
      content: (attr(data-label));
      font-weight: 700;
      left: -9rem;
      position: absolute;
      width: 9rem;
    }
    &:first-child {
      border-bottom: 1px solid #ccc;
      font-family: $accent;
      font-weight: 700;
      text-transform: uppercase;
      &::before {
        border-bottom: 1px solid #ccc;
      }
    }
    &:nth-child(2) {
      min-height: 3.2rem;
    }
    &:last-child {
      margin-bottom: 1.4rem;
    }
  }
}

@media (min-width: 768px) {
  .calendar {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    font-size: 1.3rem;
    margin-top: 2rem;
    &__header {
      background-color: #eee;
      display: table-header-group;
      font-family: $accent;
      font-size: 1.3rem;
      font-weight: 700;
      text-transform: uppercase;
    }
    &__event {
      display: table-row;
      font-weight: 700;
      &--current {
        background-color: $primary-light;
        
      }
      &--past {
        font-weight: 400;
      }
    }
    &__data {
      display: table-cell;
      left: 0;
      padding: 0.5rem;
      text-align: center;
      &::before {
        display: none;
      }
      &:first-child {
        border-bottom: none;
        font-family: $text;
        font-weight: 400;
        text-transform: none;
        &::before {
          border-bottom: none;
        }
        &:first-child .calendar__data-header {
          font-family: $accent;
        }
      }
      &:last-child {
        max-width: 12rem;
      }
      &--header {
        font-family: $accent;
      }
    }
  }
}

@media (min-width: 1024px) {
  .event-calendar {
    padding: 7rem $outter-desktop;
  }
  .calendar {
    margin-top: 3rem;
  }
}

